Added international link for winphone app.

--- a/src/main/templates/seqrShop.html
+++ b/src/main/templates/seqrShop.html
@@ -38,8 +38,8 @@
                 <img src="<%= baseURL %>/images/android.svg"><br/><%= text.android %>
             </a>
         </li>
-        <li>
-            <a href="http://www.windowsphone.com/sv-se/store/app/seqr/7c25ac1c-dfb7-4cd5-b040-fdeef6ab09a8" target="_blank">
+        <li> <!-- http://www.windowsphone.com/sv-se/store/app/seqr/7c25ac1c-dfb7-4cd5-b040-fdeef6ab09a8  -->
+            <a href="http://windowsphone.com/s?appId=7c25ac1c-dfb7-4cd5-b040-fdeef6ab09a8" target="_blank">
                 <img src="<%= baseURL %>/images/windows.svg"><br/><%= text.windows %>
             </a>
         </li>
