--- a/src/main/css/seqrShop.css
+++ b/src/main/css/seqrShop.css
@@ -14,7 +14,7 @@
 }
 #seqr-container {
   background: #f2f2f2;
-  max-width: 500px;
+  width: 500px;
   font-family: "SEQR", Helvetica, Arial, sans-serif;
   overflow: auto;
 }
